[metadata]
name = __pkg_name__
version = __version__
#version = attr: __pkg_name__.__version__
author = Maria A. Perez
author_email = map.pyeng@gmail.com
description = Purple Lemon: Base Classes and core algorithm functions
long_description = file: README.md, CHANGELOG.md
license = Apache
classifiers = ["Topic :: Software Development :: Build Tools","Programming Language :: Python :: 3","Programming Language :: Python :: 3.10"]

[options]
python_requires = >=3.12


[build-system]
requires = ["setuptools>=75.5"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
requires-python = ">=3.12"

[semantic_release]
version_variable = setup.py:__version__
branch = main
repository = purple-lemon-artifactory